피드 수정 시 이미지 최신화